# pyspark-pandas-vs-pandas

./: Pipfile  README.md  TestRuns.ipynb  pyproject.toml
data/: README.md
output/2021/third_run/: pandas.out  pyspark.out
output/2023/: results.md
output/first_run/: README.md  pyspark.out
output/second_run/: pyspark.out
output/third_run/: README.md
results/2021/first_run/: pandas.out
results/2021/second_run/: README.md  pandas.out
results/2023/: results-late-2023.md  results.md
tests/: pandas_test.py  polars_test.py  pyspark_dataframe_test.py  pyspark_pandas_test.py
util/: convert-to-one-file.py
