[tool.poetry]
name = "poetry-pandas-vs-polars"
version = "0.1.0"
description = ""
authors = ["Steven E. Levine <steve@blue64.net>"]
readme = "README.md"
packages = [{include = "poetry_pandas_vs_polars"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.15.18"
pyspark = "^3.3.1"
pyarrow = "^10.0.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
