[tool.poetry]
name = "pandas-vs-polars"
version = "0.1.0"
description = "Benchmarking Polars vs Pandas"
authors = ["Steven E. Levine <steve@blue64.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.15.18"
pyspark = "^3.3.1"
pyarrow = "^14.0.1"
pandas = "^1.5.3"
jupyterlab = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
