[tool.poetry]
name = "pandas-vs-polars"
version = "0.1.1"
description = "Benchmarking Polars vs Pandas"
authors = ["Steven E. Levine <steve@blue64.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.0"
pyspark = "3.3.*"
pyarrow = "^14.0.1"
pandas = "^2.1.4"
jupyterlab = "^4.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
